[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
dialoguer = "0.8"
cmd-import = { path = "../cmd-import"}
strum = "0.24"
strum_macros = "0.24"